Chore: Move Register Content Script to Manifest (#13)
* feat: moved register script logic out of service worker

* fix: comment resolved and code cleanup

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,13 @@
         "48": "icons/icon48.png",
         "128": "icons/icon128.png"
     },
+    "content_scripts": [
+        {
+            "run_at": "document_idle",
+            "js": ["content-script.js"],
+            "matches": ["*://*.youtube.com/*"]
+        }
+    ],
     "action": {},
     "permissions": [
         "activeTab",
